--- a/mobile/mobile.scss
+++ b/mobile/mobile.scss
@@ -9,7 +9,3 @@
 .search-menu .search-input input#search-term {
   width: 100%;
 }
-
-.custom-search-banner-wrap .search-icon {
-  top: 0.15em;
-}
